# Skills-Builder

./: .gitignore  DIRECTORY.md  LICENSE  README.md  pyproject.toml
scripts/: __init__.py  cli.py  generator.py
scripts/scrapers/: __init__.py  docusaurus.py  generic.py  gitbook.py
skills/angular/: SKILL.md
skills/angular/references/: general.md
skills/anthropic-api/: SKILL.md
skills/anthropic-api/references/: general.md
skills/astro/: SKILL.md
skills/astro/references/: en-1.md  en-10.md  en-11.md  en-12.md  en-13.md  en-14.md  en-15.md  en-16.md  en-17.md  en-18.md  en-19.md  en-2.md  en-20.md  en-21.md  en-22.md  en-23.md  en-24.md  en-25.md  en-26.md  en-27.md  en-28.md  en-29.md  en-3.md  en-30.md  en-31.md  en-32.md  en-33.md  en-34.md  en-35.md  en-36.md  en-37.md  en-38.md  en-39.md  en-4.md  en-40.md  en-41.md  en-42.md  en-43.md  en-44.md  en-45.md  (+22 more)
skills/aws-cli/: SKILL.md
skills/cortex-docs/: SKILL.md
skills/django/: SKILL.md
skills/docker-docs/: SKILL.md
skills/drizzle-orm/: SKILL.md
skills/elysia/: SKILL.md
skills/expressjs/: SKILL.md
skills/fastapi/: SKILL.md
skills/flask/: SKILL.md
skills/github-rest-api/: SKILL.md
skills/google-cloud/: SKILL.md
skills/hono/: SKILL.md
skills/mintlify/: SKILL.md
skills/nextjs/: SKILL.md
skills/openai-api/: SKILL.md
skills/react/: SKILL.md
skills/react-native-docs/: SKILL.md
skills/remix/: SKILL.md
skills/resend-api/: SKILL.md
skills/sequelize/: SKILL.md
skills/sqlalchemy/: SKILL.md
skills/sveltekit/: SKILL.md
skills/typeorm/: SKILL.md
skills/vuejs/: SKILL.md
(+1078 files in other folders)
